--- a/src/main/webapp/resources/sass/mobile/motor/_landing.scss
+++ b/src/main/webapp/resources/sass/mobile/motor/_landing.scss
@@ -12,6 +12,7 @@
 #hero{
 h1{
 	font-size: 30px;
+	margin-bottom: 0;
 }
 h3{
 font-size: 22px;
