--- a/src/main/webapp/resources/sass/mobile/motor/_quick-quote.scss
+++ b/src/main/webapp/resources/sass/mobile/motor/_quick-quote.scss
@@ -3,8 +3,20 @@
             padding-top: 0;
         }
 				 .addOn-content{
-		 height: 240px;
+		 height: 200px;
 		 }
-		 
+		 .motor-select-plan .collapse-addon{
+		 min-height: 103px;
+		 }
 
 		}
+		    body.chin{
+			.quick-quote{
+					 .motor-select-plan .collapse-addon{
+		 min-height: 63px;
+		 }
+						 .addOn-content{
+		 height: 140px;
+		 }
+		 }
+		 }
